--- a/SiverOD_PR-31_04/app/src/main/res/values/colors.xml
+++ b/SiverOD_PR-31_04/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="green">#83D96E</color>
+    <color name="dark_green">#375F40</color>
 </resources>
