--- a/SiverOD_PR-31_04/app/src/main/res/layout/bank.xml
+++ b/SiverOD_PR-31_04/app/src/main/res/layout/bank.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".bank">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -57,6 +57,7 @@
             android:layout_marginTop="13dp"
             android:layout_marginStart="56dp">
             <EditText
+                android:id="@+id/login"
                 android:layout_width="282dp"
                 android:layout_height="wrap_content"
                 android:text="@string/login"
@@ -71,6 +72,7 @@
             android:layout_marginTop="13dp"
             android:layout_marginStart="56dp">
             <EditText
+                android:id="@+id/password"
                 android:layout_width="282dp"
                 android:layout_height="wrap_content"
                 android:text="@string/password"
@@ -87,6 +89,7 @@
             android:layout_marginStart="30dp"
             android:layout_marginBottom="50dp">
             <Button
+                android:id="@+id/button"
                 android:layout_width="350dp"
                 android:layout_height="70dp"
                 android:text="@string/button1"
@@ -94,6 +97,7 @@
                 android:textSize="24sp"
                 android:textStyle="bold"
                 android:background="@drawable/button"
+                android:onClick="enter"
                 />
         </LinearLayout>
 
