--- a/SiverOD_PR-31_04/app/src/main/res/layout/calculation.xml
+++ b/SiverOD_PR-31_04/app/src/main/res/layout/calculation.xml
@@ -8,6 +8,7 @@
         android:layout_height="65dp"
         android:layout_marginTop="65dp"
         android:layout_marginStart="20dp"
+        android:orientation="vertical"
         >
         <TextView
             android:layout_width="wrap_content"
@@ -21,23 +22,92 @@
     </LinearLayout>
 
     <LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/green">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/green"
+        android:gravity="center"
+        android:orientation="vertical">
         <LinearLayout
             android:layout_width="268dp"
             android:layout_height="30dp"
-            android:background="@drawable/sum">
+            android:background="@drawable/sum"
+            android:gravity="center"
+            android:layout_marginTop="34dp"
+            android:orientation="vertical">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:text="@string/sum"
                 android:textColor="@color/black"
-                android:layout_gravity="center"
                 android:textSize="18sp"
+                android:textStyle="bold" />
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="160dp"
+            android:layout_height="35dp"
+            android:background="@drawable/sum"
+            android:gravity="center"
+            android:layout_marginTop="110dp"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/term"
+                android:textColor="@color/black"
+                android:textSize="12sp"
+                android:textStyle="bold" />
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="268dp"
+            android:layout_height="55dp"
+            android:background="@drawable/sum2"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:layout_marginTop="65dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/payment1"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/payment2"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="70dp"
+            android:layout_marginBottom="50dp">
+            <Button
+                android:layout_width="350dp"
+                android:layout_height="70dp"
+                android:text="@string/registration"
+                android:textColor="@color/white"
+                android:textSize="24sp"
                 android:textStyle="bold"
+                android:background="@drawable/button"
+                android:textAllCaps="false"
                 />
         </LinearLayout>
-</LinearLayout>
+    </LinearLayout>
 
 </LinearLayout>
